name:                trac-to-remarkup
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Trac.Parser,
                      Trac.Writer,
                      Trac.Pretty,
                      Trac.Convert,
                      Trac.Db,
                      Trac.Db.Types,
                      Trac.Web,
                      Git
  build-depends:       base >=4.9 && <4.13,
                       bytestring,
                       casing >=0.1.4.0 && <=0.2,
                       megaparsec > 6 && < 7,
                       NoTrace,
                       mtl,
                       text,
                       containers,
                       temporary,
                       time,
                       split,
                       postgresql-simple,
                       process,
                       aeson,
                       process,
                       servant,
                       servant-client
  hs-source-dirs:      src
  default-language:    Haskell2010

library gitlab-servant
  exposed-modules:     GitLab.Tickets
                       GitLab.Users
                       GitLab.Project
                       GitLab.UploadFile
                       GitLab.Common
  build-depends:       base >=4.9 && <4.13,
                       bytestring,
                       text,
                       directory,
                       exceptions >= 0.9,
                       aeson,
                       mtl,
                       time,
                       containers,
                       servant,
                       servant-client,
                       process
  hs-source-dirs:      src
  default-language:    Haskell2010

executable trac-import
  main-is:             Main.hs
  other-modules:       Settings
  ghc-options:         -threaded
  build-depends:       base,
                       async,
                       bytestring,
                       connection,
                       containers,
                       data-default,
                       directory,
                       exceptions >= 0.9,
                       filepath,
                       gitlab-servant,
                       http-client-tls,
                       http-types,
                       megaparsec > 6 && < 7,
                       mtl,
                       postgresql-simple,
                       servant-client,
                       stm,
                       text,
                       time,
                       trac-to-remarkup,
                       transformers

