name:                trac-to-remarkup
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:    Trac.Parser,
                      Trac.Writer,
                      Trac.Pretty,
                      Trac.Convert,
                      Trac.Db,
                      Trac.Db.Types,
                      Trac.Web,
                      Trac.Scraper,
                      Git
  build-depends: base >=4.9 && <4.13
               , logging

               , NoTrace
               , aeson
               , bytestring
               , casing >=0.1.4.0 && <=0.2
               , containers
               , data-default
               , http-client
               , http-client-tls
               , http-types
               , lifted-base
               , megaparsec > 6 && < 7
               , monad-control
               , mtl
               , postgresql-simple
               , process
               , process
               , servant
               , servant-client
               , split
               , taggy
               , temporary
               , transformers-base
               , text
               , time
               , unordered-containers
               , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010

library logging
  exposed-modules: Logging
  build-depends: base >=4.9 && <4.13
               , lifted-base
               , monad-control
               , mtl
               , transformers-base
  hs-source-dirs:      logging
  default-language:    Haskell2010


library gitlab-servant
  exposed-modules:     GitLab.Tickets
                       GitLab.Users
                       GitLab.Project
                       GitLab.UploadFile
                       GitLab.Common
  build-depends: base >=4.9 && <4.13
               , logging

               , aeson
               , bytestring
               , containers
               , directory
               , exceptions >= 0.9
               , lifted-base
               , monad-control
               , mtl
               , process
               , servant
               , servant-client
               , text
               , time
               , transformers-base
  hs-source-dirs:      src-servant
  default-language:    Haskell2010

executable trac-import
  main-is:             Main.hs
  other-modules:       Settings
  ghc-options:         -threaded
  build-depends: base
               , logging

               , aeson
               , monad-control
               , lifted-async
               , bytestring
               , connection
               , containers
               , data-default
               , directory
               , exceptions >= 0.9
               , filepath
               , gitlab-servant
               , http-client-tls
               , http-client
               , http-types
               , megaparsec > 6 && < 7
               , mtl
               , postgresql-simple
               , servant-client
               , stm
               , text
               , time
               , trac-to-remarkup
               , lifted-base
               , transformers
  default-language:    Haskell2010

